# CppSocketServer

./: .gitignore  CMakeLists.txt  main.cpp
Client/: Client.cpp  Client.h  GameObject.h  PlayerClient.cpp  PlayerClient.h
Client/GameObject/: GameObject.cpp  GameObject.h
Client/PlayerClient/: PlayerClient.cpp  PlayerClient.h
Client/Variables/: Variable.h
Client/Variables/Vectors/: Vector3.cpp  Vector3.h
Helpers/: ErrorCode.h  MessageHandler.cpp  MessageHandler.h  Server.cpp  Server.h  ServerRoom.cpp  ServerRoom.h
Helpers/Variables/: Variable.h
Helpers/Variables/Vector/: Vector3.cpp  Vector3.h
Server/: Server.cpp  Server.h
